--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 		}
 		return o;
 	}
-	var person1 = new createPerson('shy','24','coding');
+	var createperson = new createPerson('shy','24','coding');
 
 
 	// 构造函数模式
@@ -30,10 +30,11 @@
 			alert(this.name);
 		}
 	}
-	var person2 = new Person('shy','24','coding');
-	console.log(person2.constructor == Person);
-	console.log(person2 instanceof Object);
-	console.log(person2 instanceof Person);
+	var person = new Person('shy','24','coding');
+
+	console.log(person.constructor == Person);
+	console.log(person instanceof Object);
+	console.log(person instanceof Person);
 
 	// 原型模式
 	function Person1(){}
@@ -43,16 +44,66 @@
 	Person1.prototype.sayName = function(){
 		alert(this.name);
 	}
-	var person3 = new Person1();
-	console.log(Person1.prototype.isPrototypeOf(person3));
-	console.log(Object.getPrototypeOf(person3) == Person1.prototype);
+	var person1 = new Person1();
 
-	console.log(person3.name);
-	person3.name = 'shyboy';
-	console.log(person3.name);
-	delete person3.name;
-	console.log(person3.name);
-	console.log(person3.hasOwnProperty('name)'));
+	console.log(Person1.prototype.isPrototypeOf(person1));
+	console.log(Object.getPrototypeOf(person1) == Person1.prototype);
+
+	console.log(person1.name);
+	person1.name = 'shyboy';
+	console.log(person1.name);
+	delete person1.name;
+	console.log(person1.name);
+
+
+	// 实例属性or原型属性
+	console.log(person1.hasOwnProperty('name'));
+	console.log("name" in person1);
+
+	// 枚举
+	var o = {
+	    toString:function(){
+	        return "My Object";
+	    }
+	};
+	for (var prop in o){
+	    if(prop == "toString"){
+	        console.log("Found toString");
+	    }
+	}
+	console.log(Object.keys(Person1.prototype));
+	console.log(Object.keys(person1));
+	console.log(Object.getOwnPropertyNames(Person1.prototype));
+
+	// 另一种原型模式语法
+	function Person2(){}
+	Person2.prototype = {
+		// constructor: Person2,	//可枚举
+		name: "shy",
+		age: 24,
+		job: "coding",
+		syaName: function(){
+			console.log(this.name);
+		}
+	};
+	var person2 = new Person2();
+	console.log(person2 instanceof Object);
+	console.log(person2 instanceof Person2);
+	console.log(person2.constructor == Person2);
+	console.log(person2.constructor == Object);
+
+	Person2.prototype.sayHi = function(){
+		console.log("hi");
+	}
+	person2.sayHi();
+
+	Person2.prototype = {
+		sayName: function(){
+			console.log("shy");
+		}
+	}
+	person2.sayName();
+
 
 </script>
 </body>
