--- a/test.html
+++ b/test.html
@@ -145,6 +145,83 @@
 
 	console.log(person3.friends);
 
+
+	//变量作用域
+	var color = "blue";
+	function changeColor(){
+		var anotherColor = "red";
+		function swapColors(){
+			var tempColor = anotherColor;
+			anotherColor = color;
+			color = tempColor;
+		}
+		swapColors();
+	}
+	changeColor();
+
+
+	// 递归
+	function factorial(num){
+		if(num <= 1){
+			return 1;
+		}else{
+			return num * arguments.callee(num-1);
+		}
+	}
+	var factorial1 = (function f(num){
+		if (num <= 1) {
+			return 1;
+		} else{
+			return num * f(num-1);
+		};
+	});
+
+	// 闭包
+	function createComparisonFunction(propertyName){
+		return function(object1,object2){
+			var value1 = object1[propertyName];
+			var value2 = object2[propertyName];
+			if(value1 < value2){
+				return -1;
+			}else if(value1 > value2){
+				return 1;
+			}else{
+				return 0;
+			}
+		}
+	}
+	function compare(value1,value2){
+		if(value1 < value2){
+			return -1;
+		}else if (value1 > value2){
+			return 1;
+		}else{
+			return 0;
+		}
+	}
+	function createFunctions(){
+		var result  = new Array();
+
+		for (var i = 0; i < 10; i++) {
+			result[i] = function(){
+				return i;
+			};
+		}
+		return result;
+	}
+
+	function createFunctions1(){
+		var result  = new Array();
+
+		for (var i = 0; i < 10; i++) {
+			result[i] = function(num){
+				return function(){
+					return num;
+				};
+			}(i);
+		}
+		return result;
+	}
 </script>
 </body>
 </html>
