--- a/jq.html
+++ b/jq.html
@@ -3,15 +3,17 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="text/javascript" src="./jquery.js"></script>
+<script type="text/javascript" src="./jquery-2.0.3.js"></script>
 <title></title>
 </head>
 <body>
 
-
-
-
-
+<script type="text/javascript">
+	
+</script>
+<div>1</div>
+<div>2</div>
+<div>3</div>
 
 </body>
 </html>
